min: update